--- a/classify_server.ipynb
+++ b/classify_server.ipynb
@@ -29,7 +29,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -70,18 +71,7 @@
     "        i += 1\n",
     "    return modified_name\n",
     "\n",
-    "excepts = [\"\\[\", \"\\]\", \"\\(\", \"\\)\"]\n",
-    "\"\"\"\n",
-    "\"\\[\", \"\\]\", \"\\(\", \"\\)\", u\"해외\"\n",
-    "excepts = [u\"해외\", u\"즉시\", u\"할인\", u\"(국민|하나|우리|농협|신한|KB)카드\", \"\\[\", \"\\]\", \"\\(\", \"\\)\", u\"무료\", u\"배송\", u\"쿠폰\",\n",
-    "          u\"[◀▶▶♥●＋┏▩┓☆▒☞╋有☜口~無+.,!@#$%^&*=\\-\\\\_+|━★■♣┕ΛΟΛ┙?/]\", \"[0-9]\"]\n",
-    "\"\"\"\n",
-    "\"\"\"\n",
-    "excepts = [u\"해외\", u\"즉시\", \n",
-    "           u\"할인\",\n",
-    "           u\"(국민|하나|우리|농협|신한|KB)카드\", \"\\[\", \"\\]\", \"\\(\", \"\\)\", \n",
-    "           u\"[◀▶▶♥●＋┏▩┓☆▒☞╋有☜口~無+.,!@#$%^&*-=\\_+|━★■♣┕ΛΟΛ┙]\"];\n",
-    "\"\"\""
+    "excepts = [\"\\[\", \"\\]\", \"\\(\", \"\\)\"]"
    ]
   },
   {
