--- a/soma_classifier.ipynb
+++ b/soma_classifier.ipynb
@@ -141,17 +141,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#print twitter.morphs('[KB국민카드 5%할인, 3/14]베네통키즈블링팝 슈가스타슬립온-바이올렛(QCSH05511-VO)')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -183,28 +172,8 @@
     "        modified_name += tmp\n",
     "        i += 1\n",
     "    return modified_name\n",
-    "\"\"\"\n",
-    "excepts = [u\"해외\", u\"즉시\", u\"무료\", u\"배송\", u\"쿠폰\", \" [0-9] \",\n",
-    "           u\"할인\", u\"(국민|하나|우리|농협|신한|KB)카드\", \"\\[\", \"\\]\", \"\\(\", \"\\)\", \n",
-    "           u\"[◀▶▶♥●＋┏▩┓☆▒☞╋有☜口~無+.,!@#$%^&*-=\\_+|━★■♣┕ΛΟΛ┙]\"];\n",
-    "\"\"\"\n",
-    "\"\"\"\n",
-    "excepts = [u\"해외\", u\"즉시\", u\"할인\", u\"(국민|하나|우리|농협|신한|KB)카드\", \"\\[\", \"\\]\", \"\\(\", \"\\)\", u\"무료\", u\"배송\", u\"쿠폰\",\n",
-    "          u\"[◀▶▶♥●＋┏▩┓☆▒☞╋有☜口~無+.,!@#$%^&*=\\-\\\\_+|━★■♣┕ΛΟΛ┙?/]\", \"[0-9]\"]\n",
-    "\"\\[\", \"\\]\", \"\\(\", \"\\)\", u\"해외\"\n",
-    "\"\"\"\n",
+    "\n",
     "excepts = [\"\\[\", \"\\]\", \"\\(\", \"\\)\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#print len(filtering('[ 해외 ] IntelIntel Core i 7 - 5930 K Haswell - E 6 - Core 3 . 5 GHz LGA 2011 - v 3 140 W Desktop Processor BX 80648 I 7593', excepts))"
    ]
   },
   {
@@ -215,8 +184,6 @@
    },
    "outputs": [],
    "source": [
-    "#j['result']\n",
-    "#j['result'][1][0][1]\n",
     "import json\n",
     "\n",
     "def many_cate(num, cate):\n",
@@ -265,26 +232,6 @@
     "    return name\n",
     "\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#print image_parse('[현대백화점 V관] 파코라반베이비 룰라니트가디건 PP1-43204 핑크', '842723')"
    ]
   },
   {
@@ -944,8 +891,7 @@
     }
    ],
    "source": [
-    "print len(set(cate_list))\n",
-    "# print filtering('[ 해외 ] IntelIntel Core i 7 - 5930 K Haswell - E 6 - Core 3 . 5 GHz LGA 2011 - v 3 140 W Desktop Processor BX 80648 I 7593', excepts)"
+    "print len(set(cate_list))"
    ]
   },
   {
@@ -976,10 +922,7 @@
     "i = 0\n",
     "while(i < len(name_list)):\n",
     "    d_list.append(image_parse(name_list[i], image_list[i]))\n",
-    "    i += 1\n",
-    "    \n",
-    "#for each in d_list:\n",
-    "#    print each"
+    "    i += 1"
    ]
   },
   {
@@ -1060,17 +1003,6 @@
    "outputs": [],
    "source": [
     "x_list = vectorizer.fit_transform(name_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# print y_list"
    ]
   },
   {
@@ -1763,24 +1695,6 @@
    "source": [
     "print r['cate']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
